--- a/app/src/main/res/layout/activity_widget_config.xml
+++ b/app/src/main/res/layout/activity_widget_config.xml
@@ -64,7 +64,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/folder_picker_holder">
 
-        <com.loitp.pro.views.MySquareImageView
+        <com.loitp.ui.view.MySquareImageView
             android:id="@+id/config_image"
             android:layout_width="@dimen/widget_initial_size"
             android:layout_height="@dimen/widget_initial_size"
