--- a/app/src/main/res/layout/directory_item_grid_rounded_corners.xml
+++ b/app/src/main/res/layout/directory_item_grid_rounded_corners.xml
@@ -9,7 +9,7 @@
     android:focusable="true"
     android:paddingTop="@dimen/medium_margin">
 
-    <com.loitp.pro.views.MySquareImageView
+    <com.loitp.ui.view.MySquareImageView
         android:id="@+id/dir_thumbnail"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
