--- a/app/src/main/res/layout/directory_item_list.xml
+++ b/app/src/main/res/layout/directory_item_list.xml
@@ -11,7 +11,7 @@
     android:paddingTop="@dimen/small_margin"
     android:paddingBottom="@dimen/small_margin">
 
-    <com.loitp.pro.views.MySquareImageView
+    <com.loitp.ui.view.MySquareImageView
         android:id="@+id/dir_thumbnail"
         android:layout_width="@dimen/list_view_folder_thumbnail_size"
         android:layout_height="@dimen/list_view_folder_thumbnail_size" />
