--- a/app/src/main/res/layout/pager_photo_item.xml
+++ b/app/src/main/res/layout/pager_photo_item.xml
@@ -56,7 +56,7 @@
         android:visibility="gone"
         tools:text="My image\nAnother line" />
 
-    <com.loitp.pro.views.MediaSideScroll
+    <com.loitp.ui.view.MediaSideScroll
         android:id="@+id/photo_brightness_controller"
         android:layout_width="@dimen/media_side_slider_width"
         android:layout_height="match_parent"
@@ -96,12 +96,12 @@
 
     </RelativeLayout>
 
-    <com.loitp.pro.views.InstantItemSwitch
+    <com.loitp.ui.view.InstantItemSwitch
         android:id="@+id/instant_prev_item"
         android:layout_width="1dp"
         android:layout_height="match_parent" />
 
-    <com.loitp.pro.views.InstantItemSwitch
+    <com.loitp.ui.view.InstantItemSwitch
         android:id="@+id/instant_next_item"
         android:layout_width="1dp"
         android:layout_height="match_parent"
