--- a/app/src/main/res/layout/pager_video_item.xml
+++ b/app/src/main/res/layout/pager_video_item.xml
@@ -23,13 +23,13 @@
 
     </com.alexvasilkov.gestures.GestureFrameLayout>
 
-    <com.loitp.pro.views.MediaSideScroll
+    <com.loitp.ui.view.MediaSideScroll
         android:id="@+id/video_volume_controller"
         android:layout_width="@dimen/media_side_slider_width"
         android:layout_height="match_parent"
         android:layout_alignParentEnd="true" />
 
-    <com.loitp.pro.views.MediaSideScroll
+    <com.loitp.ui.view.MediaSideScroll
         android:id="@+id/video_brightness_controller"
         android:layout_width="@dimen/media_side_slider_width"
         android:layout_height="match_parent" />
