--- a/app/src/main/res/layout/video_item_grid.xml
+++ b/app/src/main/res/layout/video_item_grid.xml
@@ -7,7 +7,7 @@
     android:clickable="true"
     android:focusable="true">
 
-    <com.loitp.pro.views.MySquareImageView
+    <com.loitp.ui.view.MySquareImageView
         android:id="@+id/medium_thumbnail"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
