--- a/app/src/main/res/layout/dialog_directory_picker.xml
+++ b/app/src/main/res/layout/dialog_directory_picker.xml
@@ -11,7 +11,7 @@
         android:paddingTop="@dimen/activity_margin">
 
         <com.simplemobiletools.commons.views.MyRecyclerView
-            android:id="@+id/directories_grid"
+            android:id="@+id/rvDirectoriesGrid"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scrollbars="none"
@@ -19,7 +19,7 @@
             app:spanCount="@integer/directory_columns_vertical_scroll"/>
 
         <com.simplemobiletools.commons.views.FastScroller
-            android:id="@+id/directories_vertical_fastscroller"
+            android:id="@+id/fsDirectoriesVertical"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentEnd="true"
@@ -30,7 +30,7 @@
         </com.simplemobiletools.commons.views.FastScroller>
 
         <com.simplemobiletools.commons.views.FastScroller
-            android:id="@+id/directories_horizontal_fastscroller"
+            android:id="@+id/fsDirectoriesHorizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
