--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/directories_refresh_layout"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/directoriesRefreshLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -10,7 +11,7 @@
         android:layout_height="wrap_content">
 
         <com.simplemobiletools.commons.views.MyTextView
-            android:id="@+id/directories_switch_searching"
+            android:id="@+id/tvDirectoriesSwitchSearching"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?attr/selectableItemBackground"
@@ -20,10 +21,10 @@
             android:visibility="gone" />
 
         <com.simplemobiletools.commons.views.MyTextView
-            android:id="@+id/directories_empty_placeholder"
+            android:id="@+id/tvDirectoriesEmptyPlaceHolder"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/directories_switch_searching"
+            android:layout_below="@+id/tvDirectoriesSwitchSearching"
             android:alpha="0.8"
             android:gravity="center_horizontal"
             android:paddingStart="@dimen/activity_margin"
@@ -35,10 +36,10 @@
             android:visibility="gone" />
 
         <com.simplemobiletools.commons.views.MyTextView
-            android:id="@+id/directories_empty_placeholder_2"
+            android:id="@+id/tvDirectoriesEmptyPlaceHolder2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/directories_empty_placeholder"
+            android:layout_below="@+id/tvDirectoriesEmptyPlaceHolder"
             android:layout_centerHorizontal="true"
             android:background="?attr/selectableItemBackground"
             android:padding="@dimen/activity_margin"
@@ -47,30 +48,31 @@
             android:visibility="gone" />
 
         <com.simplemobiletools.commons.views.MyRecyclerView
-            android:id="@+id/directories_grid"
+            android:id="@+id/rvDirectoriesGrid"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/directories_switch_searching"
+            android:layout_below="@+id/tvDirectoriesSwitchSearching"
             android:layoutAnimation="@anim/layout_animation"
             android:scrollbars="none"
             app:layoutManager="com.simplemobiletools.commons.views.MyGridLayoutManager"
             app:spanCount="@integer/directory_columns_vertical_scroll" />
 
         <com.simplemobiletools.commons.views.FastScroller
-            android:id="@+id/directories_vertical_fastscroller"
+            android:id="@+id/fsDirectoriesVertical"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_below="@+id/directories_switch_searching"
+            android:layout_below="@+id/tvDirectoriesSwitchSearching"
             android:layout_alignParentEnd="true"
             android:paddingStart="@dimen/normal_margin"
-            android:visibility="gone">
+            android:visibility="gone"
+            tools:ignore="RtlSymmetry">
 
             <include layout="@layout/fastscroller_handle_vertical" />
 
         </com.simplemobiletools.commons.views.FastScroller>
 
         <com.simplemobiletools.commons.views.FastScroller
-            android:id="@+id/directories_horizontal_fastscroller"
+            android:id="@+id/fsDirectoriesHorizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
