--- a/app/src/main/res/layout/dialog_medium_picker.xml
+++ b/app/src/main/res/layout/dialog_medium_picker.xml
@@ -6,7 +6,7 @@
     android:paddingTop="@dimen/activity_margin">
 
     <com.simplemobiletools.commons.views.MyRecyclerView
-        android:id="@+id/media_grid"
+        android:id="@+id/rvMedia"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="none"
@@ -14,7 +14,7 @@
         app:spanCount="@integer/media_columns_vertical_scroll"/>
 
     <com.simplemobiletools.commons.views.FastScroller
-        android:id="@+id/media_vertical_fastscroller"
+        android:id="@+id/fsMediaVertical"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_alignParentEnd="true"
@@ -25,7 +25,7 @@
     </com.simplemobiletools.commons.views.FastScroller>
 
     <com.simplemobiletools.commons.views.FastScroller
-        android:id="@+id/media_horizontal_fastscroller"
+        android:id="@+id/fsMediaHorizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
