--- a/app/src/main/res/layout/fragment_holder.xml
+++ b/app/src/main/res/layout/fragment_holder.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/fragment_holder"
+    android:id="@+id/layoutFragmentHolder"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -10,14 +10,14 @@
         android:layout_height="match_parent" />
 
     <ImageView
-        android:id="@+id/top_shadow"
+        android:id="@+id/ivTopShadow"
         android:layout_width="match_parent"
         android:layout_height="@dimen/default_status_action_height"
         android:background="@drawable/gradient_background_flipped"
         android:contentDescription="@null" />
 
     <include
-        android:id="@+id/bottom_actions"
+        android:id="@+id/bottomActions"
         layout="@layout/bottom_actions"
         android:visibility="gone" />
 
