--- a/app/src/main/res/layout/activity_media.xml
+++ b/app/src/main/res/layout/activity_media.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/media_refresh_layout"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layoutMediaRefresh"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -10,7 +11,7 @@
         android:layout_height="wrap_content">
 
         <com.simplemobiletools.commons.views.MyTextView
-            android:id="@+id/media_empty_text_placeholder"
+            android:id="@+id/tvMediaEmpty"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:alpha="0.8"
@@ -24,10 +25,10 @@
             android:visibility="gone" />
 
         <com.simplemobiletools.commons.views.MyTextView
-            android:id="@+id/media_empty_text_placeholder_2"
+            android:id="@+id/tvMediaEmpty2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/media_empty_text_placeholder"
+            android:layout_below="@+id/tvMediaEmpty"
             android:layout_centerHorizontal="true"
             android:background="?attr/selectableItemBackground"
             android:padding="@dimen/activity_margin"
@@ -36,7 +37,7 @@
             android:visibility="gone" />
 
         <com.simplemobiletools.commons.views.MyRecyclerView
-            android:id="@+id/media_grid"
+            android:id="@+id/rvMedia"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layoutAnimation="@anim/layout_animation"
@@ -45,19 +46,20 @@
             app:spanCount="@integer/media_columns_vertical_scroll" />
 
         <com.simplemobiletools.commons.views.FastScroller
-            android:id="@+id/media_vertical_fastscroller"
+            android:id="@+id/fsMediaVertical"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentEnd="true"
             android:paddingStart="@dimen/normal_margin"
-            android:visibility="gone">
+            android:visibility="gone"
+            tools:ignore="RtlSymmetry">
 
             <include layout="@layout/fastscroller_handle_vertical" />
 
         </com.simplemobiletools.commons.views.FastScroller>
 
         <com.simplemobiletools.commons.views.FastScroller
-            android:id="@+id/media_horizontal_fastscroller"
+            android:id="@+id/fsMediaHorizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
