--- a/app/src/main/res/layout/activity_medium.xml
+++ b/app/src/main/res/layout/activity_medium.xml
@@ -1,24 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/fragment_holder"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/layoutFragmentHolder"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <com.simplemobiletools.commons.views.MyViewPager
-        android:id="@+id/view_pager"
+        android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 
     <include
-        android:id="@+id/bottom_actions"
-        layout="@layout/bottom_actions"/>
+        android:id="@+id/bottomActions"
+        layout="@layout/bottom_actions" />
 
-    <ImageView
-        android:id="@+id/top_shadow"
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/ivTopShadow"
         android:layout_width="match_parent"
         android:layout_height="@dimen/default_status_action_height"
-        android:contentDescription="@null"
-        android:background="@drawable/gradient_background_flipped"/>
+        android:background="@drawable/gradient_background_flipped"
+        android:contentDescription="@null" />
 
 </RelativeLayout>
