--- a/app/src/main/res/layout/activity_panorama_video.xml
+++ b/app/src/main/res/layout/activity_panorama_video.xml
@@ -1,33 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/md_grey_black">
 
     <com.google.vr.sdk.widgets.video.VrVideoView
-        android:id="@+id/vr_video_view"
+        android:id="@+id/vrVideoView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 
-    <include layout="@layout/bottom_video_time_holder"/>
+    <include layout="@layout/bottom_video_time_holder" />
 
-    <ImageView
-        android:id="@+id/explore"
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/ivExplore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:padding="@dimen/activity_margin"
-        android:src="@drawable/ic_explore_vector"/>
+        android:src="@drawable/ic_explore_vector" />
 
-    <ImageView
-        android:id="@+id/cardboard"
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/ivCardboard"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:padding="@dimen/activity_margin"
-        android:src="@drawable/ic_cardboard"/>
+        android:src="@drawable/ic_cardboard" />
 
 </RelativeLayout>
