--- a/app/src/main/res/layout/activity_video_player.xml
+++ b/app/src/main/res/layout/activity_video_player.xml
@@ -31,7 +31,7 @@
         android:layout_height="match_parent"/>
 
     <ImageView
-        android:id="@+id/top_shadow"
+        android:id="@+id/ivTopShadow"
         android:layout_width="match_parent"
         android:layout_height="@dimen/default_status_action_height"
         android:background="@drawable/gradient_background_flipped"
