--- a/app/src/main/res/layout/activity_set_wallpaper.xml
+++ b/app/src/main/res/layout/activity_set_wallpaper.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -10,8 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:cropBackgroundColor="@color/crop_image_view_background"
-        app:cropInitialCropWindowPaddingRatio="0"/>
+        app:cropInitialCropWindowPaddingRatio="0" />
 
-    <include layout="@layout/bottom_set_wallpaper_actions"/>
+    <include layout="@layout/bottom_set_wallpaper_actions" />
 
 </RelativeLayout>
